# CPP_Fundations

./: README.md
CMakeBasics/: CMake.md
CMakeBasics/Hello-CMake/: CMakeLists.txt  Main.cpp
CMakeBasics/Multiple-Programs-Cmake/: CMakeLists.txt  Hello.cpp  Hello.h  Main.cpp
CMakeBasics/Multiple-Programs-Cmake-2/: CMakeLists.txt
CMakeBasics/Multiple-Programs-Cmake-2/include/: Godbye.h  Hello.h
CMakeBasics/Multiple-Programs-Cmake-2/src/: Godbye.cpp  Hello.cpp  Main.cpp
Classes_Plus/include/: Pair.h
Classes_Plus/include/Static/: Son.h
Classes_Plus/src/: main.cpp
IO_Streams/: CMakeLists.txt
IO_Streams/files/: example.txt
IO_Streams/include/io_files/: Example.h  Input.h  Output.h
IO_Streams/notes/: 1_IO_streams.md  2_Input_stream.md  3_Stream_strings.md  BasicFileInOu.md
IO_Streams/src/: Main.cpp
Inheritance/: CMakeLists.txt
Inheritance/include/basics/: BaseballPlayer.h  Employee.h  Inheritance.h  Person.h
Inheritance/include/construction_order/: Base.h  BasePrivate.h  Derived.h  DerivedPrivate.h
Inheritance/include/derived/: Jugador.h  Persona.h
Inheritance/notes/: Inheritance.md
Inheritance/src/: Main.cpp
Inheritance/src/basics/: BaseballPlayer.cpp  Employee.cpp  Inheritance.cpp  Person.cpp
Inheritance/src/construction_order/: Derived.cpp
Intro_CPP/: Preprocessor.md
Intro_Containers/: NOTES.md
Intro_Containers/std_vector/: CMakeLists.txt
Intro_Containers/std_vector/include/: Exercises.h  Extra.h  IntroVector.h  PassReturnVector.h
Intro_Containers/std_vector/src/: Exercises.cpp  Extra.cpp  IntroVector.cpp  main.cpp
Objects_Relationships/: CMakeLists.txt
Objects_Relationships/include/: Aggregation.h  Association.h
Objects_Relationships/notes/: 2_Aggregation.md
Objects_Relationships/src/: Aggregation.cpp  Association.cpp  Main.cpp
OnProgress/Operator_Overloading/: CMakeLists.txt
OnProgress/Operator_Overloading/include/: OpOverload.h
OnProgress/Operator_Overloading/src/: Main.cpp  OpOverload.cpp
Program_Defined_Types/: CMakeLists.txt
Program_Defined_Types/include/: IntroClasses.h  IntroClasses2.h
Program_Defined_Types/notes/: 1_Program_Defined_Types.md  2_Constructors.md  3_Classes_P2.md
Program_Defined_Types/src/: IntroClasses.cpp  Main.cpp  classes  introduction_classes.cpp  introduction_structs.cpp  program_user_defined_types.cpp
Reference_Pointers/: CMakeLists.txt  README.md  Value_Categories.md
Reference_Pointers/include/: ReferencesPointers.h
Reference_Pointers/notes/: 1_Value_Categories.md  2_Lvalue_References.md  3_References_Pointers.md  4_Pass_by_Address.md  References_Pointers.md
Reference_Pointers/src/: Main.cpp  ReferencesPointers.cpp
SmartPointers/: CMakeLists.txt
SmartPointers/include/: SmartPointer.h
SmartPointers/notes/: note_1.md
SmartPointers/src/: SmartPointer.cpp  main.cpp
Templates/: CMakeLists.txt
Templates/include/: Pair.h
Templates/notes/: note_1.md
Templates/src/: main.cpp
